--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <ul>
         <li>&#8220;China's Trade Retaliation: Factuals vs. Counterfactuals.&#8221; (with Gary Lyn and Xing Xu)
 			<ul>
-				<li><b>Current draft</b>: <a href="https://faculty.uml.edu//benli/LLX14_paper.pdf">[PDF]</a> and <a href="https://faculty.uml.edu//benli/LLX13_slides.pdf">[Slides]</a> </li> 
+				<li><b>Current draft</b>: <a href="LLX14_paper.pdf">[PDF]</a> and <a href="LLX13_slides.pdf">[Slides]</a> </li> 
 				<li>For better or for worse!</li>
 			</ul>
 		</li>
 
 	        <li>&#8220;Trump, China, and the Republicans.&#8221; (with Yi Lu, Pasquale Sgro, and Xing Xu)
 			<ul>
-				<li><b>Current draft</b>: <a href="https://faculty.uml.edu//benli/LLSX8.pdf">[PDF]</a></li> 
+				<li><b>Current draft</b>: <a href="LLSX8.pdf">[PDF]</a></li> 
 				<li>This long story is as short as 53 pages</li>
 			</ul>
 		</li>
