--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
-	<link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Inconsolata">
+
     <style>
-    body {
-	font-family: "Inconsolata",monospace;
-	}
+        @import url(
+         https://fonts.googleapis.com/css?family=Inconsolata);
+        body {
+            font-family: 'Inconsolata', monospace;
+            color: green;
+        }
     </style>
+
 </head>
 	
 <body>
