--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@ Photo:
 &bull; Urban economics (fun locally)
 
 
+<span class="n">MY PARENTING</span>
+<span class="o">============</span>
+
+&bull; My daughter says no way...
+&bull; ...so I post <a href="puppy.jpg">this picture</a> instead
+
+
 <div class="footer"><a href="#top">Back to the top</a> </div>
 	</pre></div>
  
