puppy added & text changed

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Photo:
 <span class="o">============</span>
 
 &bull; My daughter says no way...
-&bull; ...so I post <a href="puppy.jpg">this picture</a> instead
+&bull; ...so I post <a href="puppy.jpg">this girl</a> instead
 
 
 <div class="footer"><a href="#top">Back to the top</a> </div>
