--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 Associate Professor of Economics
 University of Massachusetts, Lowell, MA 01854
 
-Email: benli36 (at) gmail (dot) com
+Email: benli36 at gmail dot com
 Office: HSS 461
 Photo:
 
       //// \\\\
       | ^   ^ |
-     @ (o) (o) @
+     @-(o)-(o)-@
       |   <   |
       |  ___  |
        \_____/
