new index and new LLX draft

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-    <style>
-        @import url(
-         https://fonts.googleapis.com/css?family=Inconsolata);
-        body {
-            font-family: 'Inconsolata', monospace;
-        }
-    </style>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <!-- use the font -->
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      font-size: 12px;
+    }
+  </style>
 
 </head>
 	
@@ -55,7 +56,7 @@ Photo:
 <span class="o">=========</span>
 
 "China's Trade Retaliation: Factuals vs. Counterfactuals" (with Gary Lyn and Xing Xu)
-	&bull; Current draft: <a href="LLX16_paper.pdf">[PDF]</a> and <a href="LLX13_slides.pdf">[Slides]</a> 
+	&bull; Current draft: <a href="LLX17_paper.pdf">[PDF]</a> and <a href="LLX13_slides.pdf">[Slides]</a> 
 	&bull; For better or for worse!
 	
 "Trump, China, and the Republicans" (with Yi Lu, Pasquale Sgro, and Xing Xu)
