fix font problem 2

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
   <!-- use the font -->
   <style>
     body {
-      font-family: 'Inconsolata', sans-serif;
+      font-family: 'Roboto Mono', monospace;
       font-size: 12px;
     }
   </style>
