fix font problem 3

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
-  <!-- use the font -->
-  <style>
-    body {
-      font-family: 'Roboto Mono', monospace;
-      font-size: 12px;
-    }
-  </style>
+     <meta charset="utf-8">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
+    <style>
+      body {
+        font-family: 'Tangerine', serif;
+        font-size: 14px;
+      }
+    </style>
 
 </head>
 	
