fix font problem 4

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
      <meta charset="utf-8">
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
+          href="https://fonts.googleapis.com/css?family=Inconsolata">
     <style>
       body {
-        font-family: 'Tangerine', serif;
+        font-family: 'Inconsolata', monospace;
         font-size: 14px;
       }
     </style>
