--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head><meta charset=UTF-8">
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-     <meta charset="utf-8">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Inconsolata">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" >
     <style>
       body {
-        font-family: 'Inconsolata', monospace !important;
+        font-family: 'Roboto Mono', monospace !important;
         font-size: 14px;
       }
     </style>
