--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" >
     <style>
       body {
-        font-family: 'Roboto Mono', monospace !important;
+        font-family: 'Inconsolata', monospace !important;
         font-size: 14px;
       }
     </style>
