fix font problem 8

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" >
     <style>
       body {
-        font-family: 'Inconsolata', monospace !important;
-        font-size: 14px;
+        font-family: 'Ubuntu Mono', monospace !important;
+        font-size: 12px;
       }
     </style>
 
