--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/x-icon" href="iconn.ico">
     <title>Ben Guanyi Li - Homepage</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/css?family=Fira+Code" rel="stylesheet" >
     <style>
       body {
         font-family: 'Ubuntu Mono', monospace !important;
-        font-size: 12px;
+        font-size: 13px;
       }
     </style>
 
@@ -111,13 +111,6 @@ Photo:
 &bull; Microeconomic theory (not fun but necessary)
 &bull; International trade (fun globally)
 &bull; Urban economics (fun locally)
-
-
-<span class="n">MY PARENTING</span>
-<span class="o">============</span>
-
-&bull; My daughter says no way...
-&bull; ...so I post <a href="puppy.jpg">this girl</a> instead
 
 
 <div class="footer"><a href="#top">Back to the top</a> </div>
