--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">PAST</h3>
 								<div class="item">
 									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">An aassistant professor at Boston College (2011-19)</li>
+										<li class="mb-2">An assistant professor at Boston College (2011-19)</li>
 										<li class="mb-2">A doctoral student at University of Colorado (2005-11)<li>
 										<li class="mb-2">A graduate student at CCER, Peking University (2004-05)</li>
 										<li class="mb-2">A college student at Zhejiang University (2000-04)</li>
