update versions; add corruption paper; update index

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									</div>
 									<div class="item-content">
 											<ul class="resume-list">
-											<li>Current draft: <a href="LLX17_paper.pdf">[PDF]</a> and <a href="LLX13_slides.pdf">[Slides]</a></li>
+											<li>Current draft: <a href="LLX_paper.pdf">[PDF]</a> and <a href="LLX_slides.pdf">[Slides]</a></li>
 											<li>For better or for worse!</li>
 										</ul>
 									</div>
@@ -74,11 +74,22 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Current draft: Current draft: <a href="LLSX8.pdf">[PDF]</a></li>
+											<li>Current draft: <a href="LLSX.pdf">[PDF]</a></li>
 											<li>This long story is as short as 53 pages</li>
 										</ul>
 									</div>
-								</div><!--//item-->
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Detecting Corruption from Outer Space" (with Leonardo Baccini and Yushan Hu)</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
+										
+									</div>
+									<div class="item-content">
+										<ul class="resume-list">
+											<li>Current draft: <a href="BHL.pdf">[PDF]</a></li>
+											<li>A short story from a project that I find worth reporting separately, especially <a href="corruptmap.jpg">this map</a></li>
+										</ul>
+									</div>								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Lexicographic Bias in International Trade" (with Hua Cheng and Cui Hu)</h4>
