--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<div class="item-content">
 										<ul class="resume-list">
 											<li>Current draft: <a href="BHL.pdf">[PDF]</a></li>
-											<li>A short story from a project that I find worth reporting separately, especially <a href="corruptmap.jpg">this map</a></li>
+											<li>A short story from an urban econ project that I find worth reporting separately, especially <a href="corruptmap.jpg">this map</a></li>
 										</ul>
 									</div>								</div><!--//item-->
 								<div class="item mb-3">
