add the geopolitics paper's new version

--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Papers</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"International Geopolitics" (with Penglong Zhang)</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
+										
+									</div>
+									<div class="item-content">
+											<ul class="resume-list">
+											<li>Current draft: <a href="LZ.pdf">[PDF]</a> </li>
+											<li>Endogenous trade, endogenous borders, and endogenous politics</li>
+										</ul>
+									</div>
+								</div><!--//item-->
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Trade Retaliation: China versus Theories" (with Gary Lyn and Xing Xu)</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
 										
@@ -62,7 +75,7 @@
 									<div class="item-content">
 											<ul class="resume-list">
 											<li>Current draft: <a href="LLX_paper.pdf">[PDF]</a> and <a href="LLX_slides.pdf">[Slides]</a></li>
-											<li>For better or for worse!</li>
+											<li>Who, which, how, and how much</li>
 										</ul>
 									</div>
 								</div><!--//item-->
