--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Papers</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"International Geopolitics" (with Penglong Zhang)</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"A Linear Model of Geopolitics" (with Penglong Zhang)</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
 										
 									</div>
