updated the index page

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Trump, China, and the Republicans" (with Yi Lu, Pasquale Sgro, and Xing Xu)</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2024</div>
 										
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Current draft: <a href="LLSX.pdf">[PDF]</a></li>
+										       <li>Scandinavian Journal of Economics <a href="LLSX.pdf">[PDF]</a></li>
 											<li>This long story is as short as 64 pages</li>
 										</ul>
 									</div>
