--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Journal of Economic Behavior and Organization</li>
+											<li>Journal of Economic Behavior & Organization</li>
 											<li>Ang Li and Ben Li explain why economists use alphabetic author orders</li>
 										</ul>
 									</div>	
