--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Trade Retaliation: China versus Theories" (with Gary Lyn and Xing Xu)</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Trade Retaliation and Import Prices" (with Gary Lyn and Xing Xu)</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
 										
 									</div>
