--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</div>
 									<div class="item-content">
 											<ul class="resume-list">
-											<li>Current draft: <a href="LLX_paper.pdf">[PDF]</a> and <a href="LLX_slides.pdf">[Slides]</a></li>
+											<li>Current draft: <a href="LLX_paper.pdf">[PDF]</a> </li>
 											<li>Who, which, how, and how much</li>
 										</ul>
 									</div>
