--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="resume-header">
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
-							<h2 class="resume-name mb-0 text-uppercase">Ben Guanyi Li (李冠一)</h2>
+							<h2 class="resume-name mb-0 text-uppercase">Ben Guanyi Li</h2>
 							<div class="resume-tagline mb-3 mb-md-0">Associate Professor of Economics, University of Massachusetts, Lowell, MA 01854</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
@@ -83,14 +83,14 @@
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Reduced-form Trade Retaliation" (with Gary Lyn and Xing Xu)</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">"Tariff Theories in a Trade War" (with Gary Lyn and Xing Xu)</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Working paper</div>
 										
 									</div>
 									<div class="item-content">
 											<ul class="resume-list">
-											<li>New draft coming soon! </li>
-											<li>In fact, we rely on just a sliver of structure...</li>
+											<li>Coming soon! </li>
+											<li>Trust me, very soon...</li>
 										</ul>
 									</div>
 								</div><!--//item-->
