Rename _static to static to ensure compatibility with GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Ben Li's homepage</title>
     <link rel="shortcut icon" href="iconn.ico">
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="_static/base.css">
-    <link id="theme" rel="stylesheet" type="text/css" href="_static/dark.css">
+    <link rel="stylesheet" type="text/css" href="static/base.css">
+    <link id="theme" rel="stylesheet" type="text/css" href="static/dark.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
