new index, revised a bit

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
    
   </head>
   
- <body id="body">
+ <body>
 
- <main id="main">
+ <main>
       
 <section id="basicinfo">
 
 <h1>BEN GUANYI LI</h1>
 <p>Associate Professor of Economics, University of Massachusetts, Lowell, MA 01854.</p>
 <ul class="simple">
-<li>If you just want to find me, then: benli36 dot gmail dot com 	|	Office: HSS 461</li>
+<li>If you just want to find me, then: benli36 at gmail dot com 	|	office at HSS 461</li>
 <li>If you want to find out my stuff, then continue reading... </li>
 </ul>
 
@@ -54,13 +54,13 @@
 
 <h2>"Tariff Theories in a Trade War" (with Gary Lyn and Xing Xu)</h2>
 <ul class="simple">
-  <li>Coming soon!</li>
-  <li>Trust me, very soon...</li>
+  <li>Current draft: <a href="LLX.pdf">[PDF]</a></li>
+  <li>In theory, theory doesn’t matter; in practice, it should</li>
 </ul>
 
 <h2>"Corrupt Political Figures and Corrupt GDP Figures" (with Yushan Hu and Penglong Zhang)</h2>
 <ul class="simple">
-  <li>Current draft: Available upon request</li>
+  <li>Current draft: available upon request</li>
   <li>Corruption corrupts GDP, literally.</li>
 </ul>
 
