--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
   </head>
   
- <body>
+ <body id="body">
 
  <main>
       
@@ -31,8 +31,8 @@
 <h1>BEN GUANYI LI</h1>
 <p>Associate Professor of Economics, University of Massachusetts, Lowell, MA 01854.</p>
 <ul class="simple">
-<li>If you just want to find me, then: benli36 at gmail dot com 	|	office at HSS 461</li>
-<li>If you want to find out my stuff, then continue reading... </li>
+<li>Looking for me? benli36 at gmail dot com	|	Office: HSS 461</li>
+<li>Looking for papers, past, preaching, or personal? Scroll down</li>
 </ul>
 
 <hr>
