index page updated again

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <h1>BEN GUANYI LI</h1>
 <p>Associate Professor of Economics, University of Massachusetts, Lowell, MA 01854.</p>
 <ul class="simple">
-<li>Looking for me? benli36 at gmail dot com	|	Office: HSS 461</li>
-<li>Looking for papers, past, preaching, or personal? Scroll down</li>
+<li>Looking for me? benli36 at gmail dot com	|	office at HSS 461</li>
+<li>Looking for my papers, past, preaching, parenting, puppy...? Scroll down</li>
 </ul>
 
 <hr>
