--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
     
     <!-- Metadata -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ben Li's homepage</title>
+    <meta name="description" content="Ben Guanyi Li's personal homepage – portfolio, research, and projects.">
+    <title>Ben Guanyi Li - Homepagee</title>
     <link rel="shortcut icon" href="iconn.ico">
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="static/base.css">
@@ -28,11 +28,11 @@
       
 <section id="basicinfo">
 
-<h1>BEN GUANYI LI</h1>
+<h1>Ben Guanyi Li</h1>
 <p>Associate Professor of Economics, University of Massachusetts, Lowell, MA 01854.</p>
 <ul class="simple">
 <li>Looking for me? benli36 at gmail dot com	|	office at HSS 461</li>
-<li>Looking for my papers, past, preaching, parenting, puppy...? Scroll down</li>
+<li>Looking for my papers, past, preaching, personal...? Scroll down</li>
 </ul>
 
 <hr>
@@ -166,11 +166,12 @@
 <hr>
 
 </section>
-<section id="parenting">									
-<h1>PARENTING</h3>
+<section id="personal">									
+<h1>PERSONAL</h3>
 <ul class="simple">
-  <li>Girl 1 drew a <a href="girl1draw.jpg">picture of me</a></li>
-  <li>Girl 2 contributed <a href="girl2.jpg">her photo</a></li>
+  <li>Daughter 1 drew a <a href="girl1draw.jpg">picture of me</a></li>
+  <li>Daughter 2 contributed <a href="girl2.jpg">her photo</a></li>
+  <li>The inner me is actually <a href="swordman.jpg">a playful swordman</a></li>
 </ul>
 </section>
 
