--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
   <li>In theory, theory doesn’t matter; in practice, it should</li>
 </ul>
 
-<h2>"Corrupt Political Figures and Corrupt GDP Figures" (with Yushan Hu and Penglong Zhang)</h2>
+<h2>"Corrupt Figures" (with Yushan Hu and Penglong Zhang)</h2>
 <ul class="simple">
   <li>Current draft: available upon request</li>
-  <li>Corruption corrupts GDP, literally.</li>
+  <li>Pun intended</li>
 </ul>
 
 <h2>"Trump, China, and the Republicans" (with Yi Lu, Pasquale Sgro, and Xing Xu)</h2>
 <ul class="simple">
-  <li>Scandinavian Journal of Economics <a href="LLSX.pdf">[PDF]</a> | <a href="https://doi.org/10.1111/sjoe.12580">[LINK]</a></li>
+  <li>Scandinavian Journal of Economics <a href="https://doi.org/10.1111/sjoe.12580">[LINK]</a></li>
   <li>This long story is as short as 64 pages</li>
 </ul>
 
 <h2>"Territory Flows and Trade Flows between 1870 and 2008" (with Yushan Hu and Penglong Zhang)</h2>
 <ul class="simple">
-  <li>Journal of Economic Behavior & Organization <a href="HLZ_JEBO.pdf">[PDF]</a> | <a href="https://doi.org/10.1016/j.jebo.2024.106787">[LINK]</a></li>
+  <li>Journal of Economic Behavior & Organization <a href="https://doi.org/10.1016/j.jebo.2024.106787">[LINK]</a></li>
   <li>Goods flow so territories need not, achieving global peace and security</li>
 </ul>
 
@@ -171,7 +171,6 @@
 <ul class="simple">
   <li>Daughter 1 drew a <a href="girl1draw.jpg">picture of me</a></li>
   <li>Daughter 2 contributed <a href="girl2.jpg">her photo</a></li>
-  <li>The inner me is actually <a href="swordman.jpg">a playful swordman</a></li>
 </ul>
 </section>
 
